# qbsfish

./: .gitignore  CMakeLists.txt  README.md  qbsfish.qbs
qbs/imports/: App.qbs  AutoTest.qbs  FishApp.qbs  FishAutoTest.qbs  FishLibrary.qbs  FishProduct.qbs  Lib.qbs  MyApp.qbs  MyAutoTest.qbs  MyConsoleApp.qbs  MyLibrary.qbs  MyPlugin.qbs  MyProduct.qbs  QbsApplication.qbs  QbsCppApplication.qbs  QbsDynamicLibrary.qbs  QbsLibrary.qbs  QbsStaticLibrary.qbs
qbs/modules/buildconfig/: buildconfig.qbs
qbs/modules/mym/: mym.qbs
src/: src.qbs
src/app/: CMakeLists.txt  Info.plist.in  app.qbs  fish.desktop  main.cpp  mainwindow.cpp  mainwindow.ui
src/apps/: apps.qbs
src/apps/fishapp/: CMakeLists.txt  Fish-Info.plist  Fish.icns  fish.rc  fishapp.qbs  main.cpp
src/apps/fishapp/fish.xcassets/Fish.appiconset/: Contents.json
src/apps/tool/: main.cpp  tool.qbs
src/lib/: CMakeLists.txt  class.cpp  class.h  fishlib_global.h  lib.qbs
src/libs/: libs.qbs
src/libs/fishlib/: CMakeLists.txt  class.cpp  fishlib.qbs  fishlib_global.h
src/plugins/: plugins.qbs
src/plugins/fishplugin/: fishplugin.qbs  plugin.cpp  plugin.h  plugin_global.h
tests/: tests.qbs
tests/auto/: auto.qbs
tests/auto/autotest/: autotest.qbs  main.cpp
